services/helm/manifests/homepage/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  labels:
    app.kubernetes.io/name: homepage
spec:
  ingressClassName: traefik-internal
  rules:
  - host: home.phcristian.net
    http:
      paths:
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: homepage
            port:
              number: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`home.phcristian.net`)
    kind: Rule
    services:
    - name: homepage
      port: 3000
  tls:
    secretName: homepage-ingress-secret
